# master-thesis

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  callgrind.out.1207  callgrind.out.1564  readme.md
SteepestDescent/: CMakeLists.txt  SteepestDescent.cpp  SteepestDescent.h  datatypes.h  gauss_laguerre.h  gsl_vector_utils.h  math_utils.h  print_utils.h
api/: CMakeLists.txt
api/matlab/: CMakeLists.txt  help_integrate_1d.txt  integrate_1d.cpp  integrate_2d.cpp  stedepyMatlab_2d.m  utils.h
api/python/: CMakeLists.txt  gsl_function_wrapper.h  main.cpp
benchmark/: CMakeLists.txt  benchmark_1d.cpp  benchmark_2d.cpp  integral2d_benchmark.cpp
include/steepest_descent/: api.h  complex_comparison.h  configuration.h  datatypes.h  gauss_laguerre.h  integral.h  integral_1d.h  integral_2d.h  integrator.h  math_utils.h  path_utils.h  resource_pool.h  steepest_descent.h
include/steepest_descent/integration/: gsl_function_wrapper.h  gsl_integrator.h  gsl_integrator_2d.h
latex/: eprint-hal.dbx  literatur.bib  thesis.aux  thesis.bbl  thesis.bcf  thesis.blg  thesis.fdb_latexmk  thesis.fls  thesis.lol  thesis.run.xml  thesis.tex  thesis.toc  thesis.xdv  vorlage-projekt.tex
latex/chapters/: Algorithmus.tex  EinleitungProblemstellung.tex  Entwurf.tex  Glossar.aux  Glossar.tex  Implementierung.tex  Kurzfassung.tex  Performance.tex  Selbststaendigkeitserklaerung.aux  Vorgehensweise.tex  ZusammenfassungAusblick.tex
latex/code/: 1d_integral.hpp  1d_integration_singularity.cpp  2d_integral.cpp  2d_integral.hpp  configuration2d.cpp  gauss_laguerre.cpp  gsl_integrator_2d.cpp  integral_2d_partial.cpp  integral_2d_reduce.cpp  integral_2d_singularity.cpp  integral_2d_trivial.cpp  mex_function.cpp  path_utils.cpp  tbb_example.cpp
latex/data/: performance_matlab.csv  uml.tex
latex/images/: accuracy_1d.eps
src/: CMakeLists.txt  gauss_laguerre.cpp  integral.cpp  integral_1d.cpp  integral_2d.cpp  math_utils.cpp  path_utils.cpp  steepest_descent.cpp
tests/: CMakeLists.txt  gauss_laguerre_tests.cpp  gsl_integrator_tests.cpp  integrate_1d_tests.cpp  integrate_2d_tests.cpp  math_lib_tests.cpp  steepest_descent_tests.cpp
